POM: Add assembly plugin to create a fat jar. Bump up version to 0.4.1.1